Fix z-index so diff buttons do not overlap version preview
Fixes #718

--- a/blocks/edit/da-editor/da-editor.css
+++ b/blocks/edit/da-editor/da-editor.css
@@ -23,7 +23,7 @@
   gap: 12px;
   position: absolute;
   top: 0;
-  z-index: 2;
+  z-index: 5;
   width: 100%;
   padding: 20px;
   background: #EFEFEF;
